components/operators/prometheus-operator/instance/base/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: app
  name: prometheus-app
  namespace: edge-anomaly-detection
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-app-tls
spec:
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
    - name: web-tls
      port: 9091
      protocol: TCP
      targetPort: web-tls
  selector:
    app: prometheus
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
