components/operators/prometheus-operator/instance/base/prometheus-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus-app
  namespace: edge-anomaly-detection
  labels:
    operated-prometheus: 'true'
spec:
  to:
    kind: Service
    name: prometheus-operated
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
